# pythonEmbeddingSamples

./: .editorconfig  .gitignore  CMakeLists.txt  README.md  pythonEmbeddingSamples.sln
msbpack/: record4.msgpak
msgpack/: record0.msgpak  record1.msgpak  record2.msgpak  record3.msgpak
pkl/: chunk0.pkl  chunk1.pkl  chunk2.pkl  chunk3.pkl  chunk4.pkl  record0.pkl  record1.pkl  record2.pkl  record3.pkl  record4.pkl
pythonEmbeddingSample01/: CMakeLists.txt  pythonEmbeddingSample01.cpp  pythonEmbeddingSample01.sln  pythonEmbeddingSample01.vcxproj  pythonEmbeddingSample01.vcxproj.filters
pythonEmbeddingSample02/: CMakeLists.txt  pythonEmbeddingSample02.cpp  pythonEmbeddingSample02.sln  pythonEmbeddingSample02.vcxproj  pythonEmbeddingSample02.vcxproj.filters
pythonEmbeddingSample03/: CMakeLists.txt  CMakeSettings.json  pythonEmbeddingSample03.cpp  pythonEmbeddingSample03.sln  pythonEmbeddingSample03.vcxproj  pythonEmbeddingSample03.vcxproj.filters
pythonEmbeddingSample04/: CMakeLists.txt  pythonEmbeddingSample04.cpp  pythonEmbeddingSample04.sln  pythonEmbeddingSample04.vcxproj  pythonEmbeddingSample04.vcxproj.filters
scripts/: ConvertHtmlModule.py  client.py  msgpackLogRecord.py  scripts.pyproj  server.py  test_def.py
